--- a/package.json
+++ b/package.json
@@ -7,17 +7,23 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@okta/okta-vue": "^1.0.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-js-modal": "^1.3.28",
     "vue-router": "^3.0.2",
     "vue-sidebar-menu": "^3.3.0",
+    "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
     "@vue/cli-plugin-pwa": "^3.3.0",
     "@vue/cli-service": "^3.3.0",
-    "vue-template-compiler": "^2.5.21"
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.1",
+    "vue-cli-plugin-vuetify": "^0.4.6",
+    "vue-template-compiler": "^2.5.21",
+    "vuetify-loader": "^1.0.5"
   }
 }
