--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@okta/okta-vue": "^1.0.0",
+    "axios": "^0.18.0",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.21",
     "vue-js-modal": "^1.3.28",
