--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue-js-modal": "^1.3.28",
     "vue-router": "^3.0.2",
     "vue-sidebar-menu": "^3.3.0",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.3.0",
     "vuex": "^3.0.1"
   },
